--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_MYSQL_CONNECTION=mysql
 DB_MYSQL_HOST=127.0.0.1
 DB_MYSQL_PORT=3306
-DB_MYSQL_NAME=oxgaming
+DB_MYSQL_NAME=wnet
 DB_MYSQL_USER=root
 DB_MYSQL_PASSWORD=root
 DB_MYSQL_CHARSET=utf8
